--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/kikooOOoo16/node-zero-cli#readme",
   "devDependencies": {
+    "eslint": "^8.12.0",
+    "eslint-plugin-node": "^11.1.0",
     "nodemon": "^2.0.15"
   }
 }
