--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "eslint": "^8.12.0",
     "eslint-plugin-node": "^11.1.0",
     "nodemon": "^2.0.15"
+  },
+  "dependencies": {
+    "chalk": "^4.1.0"
   }
 }
