Fix bugs and data service small restructure. Fix a bug that allowed the user to enter a fast that has an end date earlier than Date.now(). Fix a bug that caused the app to crash if a user deleted the data.json file started the app and tried to read all previous fasts. Add missing chalk styling.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Local JSON file
-./data/data.json
+data/data.json
 
 # IDE related configs
 .idea
@@ -137,3 +137,5 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+
